Fix various styling issues, mostly mobile (#128)
Add horizontal whitespace between blocks in places.

Shrink side margins around home page imageTextLink on mobile.

Fix distorted tool icons on mobile.

--- a/src/components/Blocks/ProjectDetails/ProjectDetails.module.scss
+++ b/src/components/Blocks/ProjectDetails/ProjectDetails.module.scss
@@ -74,7 +74,6 @@
                     padding-right: 30px;
 
                     @include mq-below(mid-small) {
-                        width: 100%;
                         padding: 0 0 15px 0;
                     }
                 }
